Fixes for the ch-combo-box control on mobile devices (#373)
* Fix combo-box value alignment on mobile devices

* Fix placeholder value not working on mobile devices

* Update combo-box.showcase.tsx

--- a/src/components/combobox/combo-box.scss
+++ b/src/components/combobox/combo-box.scss
@@ -166,6 +166,8 @@ select {
 }
 
 .value {
+  display: inline-grid;
+  align-items: center;
   position: absolute;
   inset-inline: var(--ch-combo-box-mask-inline-start)
     var(--ch-combo-box-mask-inline-end);
